--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,6 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=skinet.db"
-    }
-
+    },
+    "ApiUrl": "https://localhost:5001/"
 }
